--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "db:reload": "npm run db:drop && npm run db:load",
     "db:load": "node src/database/load.js",
-    "db:drop": "rm src/database/db.sqlite"
+    "db:drop": "del src\\database\\db.sqlite"
   },
   "type": "module",
   "keywords": [],
