--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "db:reload": "npm run db:drop && npm run db:load",
     "db:load": "node src/database/load.js",
     "db:drop": "del src\\database\\db.sqlite"
+    
   },
   "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.19.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
@@ -28,5 +30,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
