--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
