--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-async-errors": "^3.1.1",
     "jquery": "^3.7.1",
     "jsdom": "^24.0.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "prisma": "^5.20.0",
     "sqlite-async": "^1.2.0",
