--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "morgan": "^1.10.0",
     "prisma": "^5.20.0",
     "sqlite-async": "^1.2.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
