--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsdom": "^24.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.16",
     "prisma": "^5.20.0",
     "sqlite-async": "^1.2.0",
     "uuid": "^10.0.0",
