--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "db:drop": "del src\\database\\db.sqlite"
+    "db:drop": "del src\\database\\db.sqlite",
+    "testSchools": "node --test src/tests/escolas.test.js",
+    "testUsers": "node --test src/tests/usuarios.test.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -29,12 +31,14 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
+    "playwright": "^1.50.1",
     "prisma": "^5.20.0",
     "sqlite-async": "^1.2.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "supertest": "^7.0.0"
   }
 }
